--- a/Energy.App.Standalone/Features/Setup/Setup.razor
+++ b/Energy.App.Standalone/Features/Setup/Setup.razor
@@ -9,9 +9,7 @@
 
 <MudGrid Justify="Justify.Center">
     <MudItem xs="12">
-        <MudPaper Elevation="2" Class="p-2 mt-3">
-            <MudText Typo="Typo.h4" Align="Align.Center" Class="eme-focus">Setup</MudText>
-        </MudPaper>
+            <MudText Typo="Typo.h4" Align="Align.Center" Class="mt-3 eme-focus">App Setup</MudText>
     </MudItem>
     <MudItem xs="12">
         <MudPaper Elevation="2" Class="p-2 mt-2">
