--- a/Energy.App.Standalone/Features/Setup/Meter/Pages/MeterAuthorizationPage.razor
+++ b/Energy.App.Standalone/Features/Setup/Meter/Pages/MeterAuthorizationPage.razor
@@ -6,7 +6,7 @@
 @inject IDispatcher Dispatcher
 @inject NavigationManager NavigationManager
 
-<PageTitle>@MeterTypeText Authorization</PageTitle>
+<ExtendedPageTitle>@MeterTypeText Authorization</ExtendedPageTitle>
 
 <MudGrid Justify="Justify.Center">
     <MudItem xs="12">
