--- a/Energy.App.Standalone/Features/Setup/Meter/Pages/MeterTariffsPage.razor
+++ b/Energy.App.Standalone/Features/Setup/Meter/Pages/MeterTariffsPage.razor
@@ -2,7 +2,7 @@
 @inherits FluxorComponent
 
 
-<PageTitle>@MeterTypeText Tariffs</PageTitle>
+<ExtendedPageTitle>@MeterTypeText Tariffs</ExtendedPageTitle>
 
 <MudStack Class="mt-2"> 
     
