--- a/Energy.App.Standalone/Pages/Index.razor
+++ b/Energy.App.Standalone/Pages/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 
-<PageTitle>Welcome</PageTitle>
+<ExtendedPageTitle>Welcome</ExtendedPageTitle>
 
 
 <MudGrid Justify="Justify.Center">
