--- a/Energy.App.Standalone/Features/Analysis/HeatingMeterAnalysisPage.razor
+++ b/Energy.App.Standalone/Features/Analysis/HeatingMeterAnalysisPage.razor
@@ -1,7 +1,7 @@
 ﻿@page "/HeatingMeter/{MeterTypeName}"
-
 @inherits FluxorComponent
-@inject IDispatcher Dispatcher
+
+<ExtendedPageTitle>@MeterTypeName Analysis</ExtendedPageTitle>
 
 @if (_parametersSet)
 {
