--- a/Energy.App.Standalone/Features/Setup/Meter/Pages/AddGasMeterPage.razor
+++ b/Energy.App.Standalone/Features/Setup/Meter/Pages/AddGasMeterPage.razor
@@ -4,7 +4,7 @@
 @inject IState<MeterSetupState> MeterSetupState
 @inject IDispatcher Dispatcher
 
-<PageTitle>Add Gas Meter</PageTitle>
+<ExtendedPageTitle>Add Gas Meter</ExtendedPageTitle>
 
 
 <MudGrid Justify="Justify.Center">
