--- a/Energy.App.Standalone/PageComponents/Modal.razor
+++ b/Energy.App.Standalone/PageComponents/Modal.razor
@@ -12,69 +12,134 @@
                 RelativeWidth="true">
 
 
-        <MudPaper Elevation="2" Class="p-4">
-            <MudGrid Justify="Justify.Center">
-                <MudItem xs="12">
-                    <div class="d-flex justify-content-end">
-                        <MudText Class="@((showHeader) ? "mx-auto fw-bold" : "mx-auto fw-bold eme-popover-header-hide")" Align="Align.Center" Typo="Typo.h5">@headerText</MudText>
-                        <MudIconButton Class="m-0" Icon="@Icons.Material.Filled.Close" OnClick="CloseModal"></MudIconButton>
-                    </div>
-                </MudItem>
-                <MudItem xs="12">
-                    @if (_showWelcomeFirst)
-                    {
-                        <WelcomeText OnNext="WelcomeTextOnNextClicked" OnClose="CloseModal"></WelcomeText>
-                    }
-                    else
-                    {
-                        @switch (_currentStage)
-                        {
-                            case SetupStage.NotSeenWelcomeScreenSplash:
-                                <WelcomeText OnNext="WelcomeTextOnNextClicked" ></WelcomeText>
-                                break;
-                            case SetupStage.HouseholdNotSetup:
-                                showHeader = false;
-                                <Household SaveSuccessfulCallback="OnSuccessfulCallback" />
-                                break;
-                            case SetupStage.GasMeterNotSetup:
-                                <AddGasMeterPage OnSuccessfulCallback="OnSuccessfulCallback" />
+        @switch (_currentStage)
+        {
+            case SetupStage.NotSeenWelcomeScreenSplash:
+                <WizardStepTemplate OptionalHeaderText="Welcome to Explain my Energy" CloseWizardCallback="CloseModal">
+                    <SetupStepPage>
+                        <WelcomeText OnSuccessCallback="@(async
+                            () =>
+                            {   _currentStageSuccess = true;
+                                await WelcomeTextAcknowledged();
+                            })">
+                        </WelcomeText>
+                    </SetupStepPage>
+                    <ActionButtons>
+                        <div class="d-flex justify-content-evenly">
+                            <MudButton Disabled="@(!_currentStageSuccess)" Color="Color.Primary" OnClick="GoToNextStage">Start Wizard</MudButton>
+                            <MudButton Color="Color.Default" OnClick="CloseModal">Close</MudButton>
+                        </div>
+                    </ActionButtons>
+                </WizardStepTemplate>
+                break;
+            case SetupStage.HouseholdNotSetup:
+                <WizardStepTemplate CloseWizardCallback="CloseModal">
+                    <SetupStepPage>
+                        <Household SaveSuccessfulCallback="@(() => { _currentStageSuccess = true; return Task.CompletedTask;})" />
+                    </SetupStepPage>
+                    <ActionButtons>
+                        <div class="d-flex justify-content-evenly">
+                            <MudButton Disabled="@(!_currentStageSuccess)" Color="Color.Primary" OnClick="GoToNextStage">Next</MudButton>
+                            <MudButton Color="Color.Default" OnClick="CloseModal">Close</MudButton>
+                        </div>
+                    </ActionButtons>
+                </WizardStepTemplate>
 
-                                break;
-                            case SetupStage.GasMeterNotAuthorized:
-                                <MeterAuthorizationPage MeterTypeText="@MeterType.Gas.ToString()" OnSuccessfulCallback="OnSuccessfulCallback" FromWizard="true" />
+                break;
+            case SetupStage.GasMeterNotSetup:
+                <WizardStepTemplate CloseWizardCallback="CloseModal">
+                    <SetupStepPage>
+                        <AddGasMeterPage OnSuccessfulCallback="@(() => { _currentStageSuccess = true; return Task.CompletedTask;})" />
+                    </SetupStepPage>
+                    <ActionButtons>
+                        <div class="d-flex justify-content-evenly">
+                            <MudButton Disabled="@(!_currentStageSuccess)" Color="Color.Primary" OnClick="GoToNextStage">Authorize</MudButton>
+                            <MudButton Disabled="@(!_canSkipCurrentStage)" ButtonType="ButtonType.Button" OnClick="SkipToNextValidStage" Color="Color.Default">Skip to Electricity Meter</MudButton>
 
-                                break;
-                            case SetupStage.ElectricityMeterNotSetup:
-                                <AddElectricityMeterPage OnSuccessfulCallback="OnSuccessfulCallback" />
-                                break;
-                            case SetupStage.ElectricityMeterNotAuthorized:
-                                <MeterAuthorizationPage MeterTypeText="@MeterType.Electricity.ToString()" OnSuccessfulCallback="OnSuccessfulCallback" FromWizard="true" />
-                                break;
-                            case SetupStage.None:
-                                <div class="d-flex">
+                            <MudButton Color="Color.Default" OnClick="CloseModal">Close</MudButton>
+                        </div>
+                    </ActionButtons>
+                </WizardStepTemplate>
+
+                break;
+            case SetupStage.GasMeterNotAuthorized:
+                <WizardStepTemplate CloseWizardCallback="CloseModal">
+                    <SetupStepPage>
+                        <MeterAuthorizationPage MeterTypeText="@MeterType.Gas.ToString()"
+                                                OnSuccessfulCallback="@(() => { _currentStageSuccess = true; return Task.CompletedTask;})"
+                                                FromWizard="true" />
+                    </SetupStepPage>
+                    <ActionButtons>
+                        <div class="d-flex justify-content-evenly">
+                            <MudButton Disabled="@(!_currentStageSuccess)" Color="Color.Primary" OnClick="GoToNextStage">Next</MudButton>
+                            <MudButton Disabled="@(!_canSkipCurrentStage)" ButtonType="ButtonType.Button" OnClick="SkipToNextValidStage" Color="Color.Default">Skip</MudButton>
+
+                            <MudButton Color="Color.Default" OnClick="CloseModal">Close</MudButton>
+                        </div>
+                    </ActionButtons>
+                </WizardStepTemplate>
+
+                break;
+            case SetupStage.ElectricityMeterNotSetup:
+                <WizardStepTemplate CloseWizardCallback="CloseModal">
+                    <SetupStepPage>
+                        <AddElectricityMeterPage OnSuccessfulCallback="@(() => { _currentStageSuccess = true; return Task.CompletedTask;})" />
+
+                    </SetupStepPage>
+                    <ActionButtons>
+                        <div class="d-flex justify-content-evenly">
+                            <MudButton Disabled="@(!_currentStageSuccess)" Color="Color.Primary" OnClick="GoToNextStage">Authorize</MudButton>
+                            <MudButton Disabled="@(!_canSkipCurrentStage)" ButtonType="ButtonType.Button" OnClick="SkipToNextValidStage" Color="Color.Default">Skip</MudButton>
+
+                            <MudButton Color="Color.Default" OnClick="CloseModal">Close</MudButton>
+                        </div>
+                    </ActionButtons>
+                </WizardStepTemplate>
+                break;
+            case SetupStage.ElectricityMeterNotAuthorized:
+                <WizardStepTemplate CloseWizardCallback="CloseModal">
+                    <SetupStepPage>
+                        <MeterAuthorizationPage MeterTypeText="@MeterType.Electricity.ToString()"
+                                                OnSuccessfulCallback="@(() => { _currentStageSuccess = true; return Task.CompletedTask;})"
+                                                FromWizard="true" />
+
+                    </SetupStepPage>
+                    <ActionButtons>
+                        <div class="d-flex justify-content-evenly">
+                            <MudButton Disabled="@(!_currentStageSuccess)" Color="Color.Primary" OnClick="GoToNextStage">Authorize</MudButton>
+                            <MudButton Disabled="@(!_canSkipCurrentStage)" ButtonType="ButtonType.Button" OnClick="SkipToNextValidStage" Color="Color.Default">Skip</MudButton>
+
+                            <MudButton Color="Color.Default" OnClick="CloseModal">Close</MudButton>
+                        </div>
+                    </ActionButtons>
+                </WizardStepTemplate>
+                break;
+            case SetupStage.None:
+                <WizardStepTemplate CloseWizardCallback="CloseModal">
+                    <SetupStepPage>
+                        <MudGrid Justify="Justify.Center">
+                            <MudItem xs="12">
+                                <MudPaper Elevation="2" Class="p-2 mt-2">
                                     <MudAlert Severity="Severity.Success" Elevation="0" Class="eme-alert">Setup wizard completed</MudAlert>
-                                </div>
-                                <div class="d-flex">
-                                    <MudButton ButtonType="ButtonType.Button" OnClick="GoToAnalysis" Color="Color.Success">View Analysis</MudButton>
-                                </div>
-                                break;
+                                </MudPaper>
+                            </MudItem>
+                        </MudGrid>
+                    </SetupStepPage>
+                    <ActionButtons>
+                        <div class="d-flex justify-content-evenly">
+                            <MudButton Color="Color.Success" ButtonType="ButtonType.Button" OnClick="GoToAnalysis">View Analysis</MudButton>
 
-         !!         !!          default:
-                                Logger.LogError("Setup Stage should not be processed: {SetupStage}", _currentStage);
-                                break;
-                        }
-                    }
-                </MudItem>
-                <MudItem xs="12">
-                    <div class="d-flex justify-content-evenly">
-                        <MudButton hidden="@(_currentStage == SetupStage.None)" Disabled="_updateStageSuccess" ButtonType="ButtonType.Button" OnClick="GoToNextStage" Color="Color.Success">Next</MudButton>
-                        <MudButton hidden="@(!_canSkipCurrentStage)" ButtonType="ButtonType.Button" OnClick="SkipToNextValidStage" Color="Color.Default">Skip</MudButton>
+                            <MudButton Color="Color.Default" OnClick="CloseModal">Close</MudButton>
+                        </div>
+                    </ActionButtons>
+                </WizardStepTemplate>
 
-                    </div>
-                </MudItem>
-            </MudGrid>
-        </MudPaper>
+                break;
 
+            default:
+                Logger.LogError("Setup Stage not recognised: {SetupStage}", _currentStage);
+                break;
+        }
 
     </MudPopover>
 
@@ -95,18 +160,15 @@
     List<SetupStage> _setupStages;
     bool _open = false;
 
-    bool showHeader = true;
-    string headerText;
-
     SetupStage _currentStage;
     SetupStage _nextValidStage;
-    bool _updateStageSuccess = false;
-    bool _canSkipCurrentStage = true;
+    bool _currentStageSuccess = false;
+    bool _canSkipCurrentStage = false;
 
 
-    private Task WelcomeTextOnNextClicked()
+    private Task WelcomeTextAcknowledged()
     {
-        InMemoryStateContainer.ClosedWelcome = true;
+        InMemoryStateContainer.WelcomeTermsAccepted = true;
         return Task.CompletedTask;
     }
 
@@ -116,11 +178,7 @@
         {
             Logger.LogInformation("All setup stages complete: {InitialSetupStages}", InitialSetupStages);
         }
-        @if ((InitialSetupStages & SetupStage.NotSeenWelcomeScreenSplash) != 0)
-        {
-            headerText = "Welcome to Explain my Energy";
-            showHeader = true;
-        }
+        
 
         _setupStages = InitialSetupStages.eGetFlags().Where(c => c != SetupStage.None).ToList();
 
@@ -186,32 +244,40 @@
     {
         _setupStages.Remove(_currentStage);
         _currentStage = _setupStages.FirstOrDefault();
-        _updateStageSuccess = false;
+        _currentStageSuccess = false;
         SetSkipToNextValidStageValid();
 
         StateHasChanged();
     }
 
-    public void OnSuccessfulCallback()
-    {
-        _updateStageSuccess = true;
 
-        StateHasChanged();
-    }
-
-    void GoToAnalysis()
+    async void GoToAnalysis()
     {
-        _open = false;
-        OpenChanged.InvokeAsync(false);
+        try
+        {
+            _open = false;
+            await OpenChanged.InvokeAsync(false);
+        }
+        catch (Exception ex)
+        {
+            Logger.LogError(ex, "Error closing modal");
+        }
 
         NavigationManager.NavigateTo("/Analysis"); //TODO: Setup custom route
     }
 
-    void CloseModal()
+    async void CloseModal()
     {
-        InMemoryStateContainer.ClosedWelcome = true;
-        _open = false;
-        OpenChanged.InvokeAsync(false);
+        try
+        {
+            _open = false;
+            await OpenChanged.InvokeAsync(false);
+        }
+        catch (Exception ex)
+        {
+            Logger.LogError(ex, "Error closing modal");
+        }
+        
     }
 
 }
